light/dark mode toggling alignment fixed

--- a/src/assets/scss/partials/header/_header.scss
+++ b/src/assets/scss/partials/header/_header.scss
@@ -594,7 +594,7 @@ input[type='radio']:checked:after {
   padding-right: 20px;
   @media screen and (min-width: 320px) and (max-width: 992px) {
     margin-left: 0px;
-    padding-left: 20px;
+    padding-left: 20px !important;
     width: auto !important;
   }
 }
